src/k8/GCP/Guide-Setting_up_Load_Balancing_with_Ingress/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: web
  type: NodePort
---
