src/k8/GCP/Guide-Setting_up_Load_Balancing_with_Ingress/fanout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /v2/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: web2
                port:
                  number: 8080
---
